--- a/main.html
+++ b/main.html
@@ -4,71 +4,46 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-  <h2> My Carousel</h2>
+  <h2>Carousel Example</h2>  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-	<li data-target="#myCarousel" data-slide-to="4"></li>
-	<li data-target="#myCarousel" data-slide-to="5"></li>
-
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-      <div class="item active">
-        <img src="https://tse4.explicit.bing.net/th?id=OIP.L66cA1BNIxdOvbuMuFEm3AHaEo&pid=Api&P=0" alt="India" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>INDIA</h3>
-          <p>Sports ground!</p>
-        </div>
+      <div class="first-slide item">
+        <img src="https://images.unsplash.com/photo-1661961110144-12ac85918e40?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="laptop-1" style="width:100%;">
       </div>
 
-      <div class="item">
-        <img src="https://tse3.explicit.bing.net/th?id=OIP.PPGCfzzz5lbKcQz8pchl5QHaEK&pid=Api&P=0" alt="Sprots" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Sports Events</h3>
-          <p>Thank you!</p>
-        </div>
+      <div class="second-slide item">
+        <img src="https://images.unsplash.com/photo-1661961110218-35af7210f803?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="laptop-2" style="width:100%;">
       </div>
     
-      <div class="item">
-        <img src="https://tse3.mm.bing.net/th?id=OIP.pbMJHOGANfsZl3dp7W78PgHaE8&pid=Api&P=0" alt="New games" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>New Games</h3>
-          <p>We love the Sports!</p>
-        </div>
-	  </div>
-		    <div class="item">
-        <img src="https://tse3.mm.bing.net/th?id=OIP.b3hL_YEBHsmloSEymHTixwHaEe&pid=Api&P=0" alt="New games" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Games</h3>
-          <p>We love the Sports and Games!</p>
-        </div>
-			</div>
-				    <div class="item">
-        <img src="https://tse2.mm.bing.net/th?id=OIP.cPgyplaPWhbD73W8RAcvUwHaDF&pid=Api&P=0" alt="Loving " style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Playing by hearts</h3>
-          <p>We love Sports and Games!</p>
-        </div>
-			</div>		
-
+      <div class="third-slide item active">
+        <img src="https://images.unsplash.com/photo-1661961112951-f2bfd1f253ce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80" alt="laptop-3" style="width:100%;">
       </div>
+
+		<div class="fourth-slide item">
+        <img src="https://images.unsplash.com/photo-1661961112835-ca6f5811d2af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80" alt="laptop-4" style="width:100%;">
+      </div>
+
+		<div class="fifth-slide item">
+        <img src="https://images.unsplash.com/photo-1661961112951-f2bfd1f253ce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80" alt="laptop-5" style="width:100%;">
+      </div>
+    </div>
+
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
@@ -80,7 +55,6 @@
     </a>
   </div>
 </div>
-
 
     <script type="text/javascript" src="./script.js">
 </script>
